--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 x Wireframe
 [] Color Palette using hex codes (pick 3) 
 x Font(s) using google fonts
-[] Seven or more images 
+x Seven or more images 
   x sourced [] and maybe source better ones?
-  [] placed 
-  [] credited
-[] Copy about those images
-  [] written
-  [] placed
+  x placed 
+  [] credited - more credits!
+[] Copy about those images - more copy!
+  x written
+  x placed
 --> 
 
 <!--
