--- a/page3.html
+++ b/page3.html
@@ -25,7 +25,7 @@
         
 <!--Text and pictures go here!--> 
 <h1>Pop Quiz</h1>
-    <p>To check your answer, hightlight the hidden text below each question.</p>
+    <p>To check your answer, highlight the hidden text below each question.</p>
     
 <div class="boxone">
     <h3>What was the deadliest hurricane in U.S. history?
